Optimize the entire springboot-backend source code.