@@ -17,12 +17,8 @@ import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
-/**
- * Filter xác thực JWT cho các request từ UI (Admin Portal)
- */
 @Slf4j
 @Component
 @RequiredArgsConstructor
@@ -37,38 +33,34 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
                                     FilterChain filterChain) throws ServletException, IOException {
-
         try {
-            String jwt = extractJwtFromRequest(request);
+            String jwt = extractJwt(request);
 
             if (StringUtils.hasText(jwt) && jwtTokenProvider.validateToken(jwt)) {
                 String username = jwtTokenProvider.getUsernameFromToken(jwt);
 
-                MerchantUser user = userRepository.findByUsernameAndIsActiveTrue(username)
-                        .orElse(null);
+                MerchantUser user = userRepository.findByUsernameAndIsActiveTrue(username).orElse(null);
 
                 if (user != null && !user.isLocked()) {
-                    List<SimpleGrantedAuthority> authorities = Collections.singletonList(
+                    List<SimpleGrantedAuthority> authorities = List.of(
                             new SimpleGrantedAuthority("ROLE_" + user.getRole().name())
                     );
 
-                    UsernamePasswordAuthenticationToken authentication =
-                            new UsernamePasswordAuthenticationToken(user, null, authorities);
-                    authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                    UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(user, null, authorities);
+                    auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
 
-                    SecurityContextHolder.getContext().setAuthentication(authentication);
-
+                    SecurityContextHolder.getContext().setAuthentication(auth);
                     log.debug("Authenticated user: {} via JWT", username);
                 }
             }
         } catch (Exception e) {
-            log.error("Cannot set user authentication: {}", e.getMessage());
+            log.error("Failed to set user authentication: {}", e.getMessage());
         }
 
         filterChain.doFilter(request, response);
     }
 
-    private String extractJwtFromRequest(HttpServletRequest request) {
+    private String extractJwt(HttpServletRequest request) {
         String bearerToken = request.getHeader(AUTHORIZATION_HEADER);
         if (StringUtils.hasText(bearerToken) && bearerToken.startsWith(BEARER_PREFIX)) {
             return bearerToken.substring(BEARER_PREFIX.length());
@@ -79,7 +71,6 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     @Override
     protected boolean shouldNotFilter(HttpServletRequest request) {
         String path = request.getRequestURI();
-        // Chỉ filter các request đến /api/v1/auth/ và /api/v1/admin/
         return !path.startsWith("/api/v1/admin/") && !path.startsWith("/api/v1/auth/");
     }
 }
